--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.debug=false
-log4j.rootLogger=INFO, stdout ,fileout
+log4j.rootLogger=INFO, stdout ,fileout,fileerr
 
 log4j.logger.org.conan=INFO
 log4j.logger.org.springframework=WARN
@@ -15,3 +15,9 @@ log4j.appender.fileout.MaxFileSize=10000KB
 log4j.appender.fileout.layout=org.apache.log4j.PatternLayout
 log4j.appender.fileout.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH:mm:ss} (%F:%L) - %m%n
 
+log4j.logger.logError=ERROR,fileerr
+log4j.appender.fileerr=org.apache.log4j.RollingFileAppender
+log4j.appender.fileerr.File=logs/error.log
+log4j.appender.fileerr.MaxFileSize=10000KB
+log4j.appender.fileerr.layout=org.apache.log4j.PatternLayout
+log4j.appender.fileerr.layout.ConversionPattern=%-5p %d{yyyy-MM-dd HH:mm:ss} (%F:%L) - %m%n
