--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<log4j.version>1.2.15</log4j.version>
 		<mybatis.ehcache.version>1.0.0</mybatis.ehcache.version>
 		<aspectj.version>1.6.10</aspectj.version>
+		<mysql.version>5.1.21</mysql.version>
 	</properties>
 
 	<dependencies>
@@ -90,7 +91,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.21</version>
+			<version>${mysql.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
