--- a/search/src/main/resources/log4j.properties
+++ b/search/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.debug=false
-log4j.rootLogger=DEBUG, stdout ,fileout, fileerr
+log4j.rootLogger=INFO, stdout ,fileout, fileerr
 
 log4j.logger.org.conan=INFO
 log4j.logger.org.springframework=WARN
