--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 .settings
 target
 *.log
+
 search/metadata/doc
 search-php/assets/*
 search-php/protected/runtime/*
+search-php/temp/*
+search-php/metadata/*
